err/eddy.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/argparse-1.4.0.dist-info'...
Listing './lib/python3.5/site-packages/eddy'...
Compiling './lib/python3.5/site-packages/eddy/defaults.py'...
***   File "./lib/python3.5/site-packages/eddy/defaults.py", line 13
    EXTENSIONS : dict = {
               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/eddy/generators.py'...
***   File "./lib/python3.5/site-packages/eddy/generators.py", line 48
    self.pages : List[dict]= []
               ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/eddy/md_extensions'...
Compiling './lib/python3.5/site-packages/eddy/readers.py'...
***   File "./lib/python3.5/site-packages/eddy/readers.py", line 9
    ext : List[str] = []
        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/eddy/tools'...
Compiling './lib/python3.5/site-packages/eddy/tools/eddy_quickstart.py'...
***   File "./lib/python3.5/site-packages/eddy/tools/eddy_quickstart.py", line 31
    print(f"Starting a new Eddy instance in {args.path}")
                                                       ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/eddy-0.2.9.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pypandoc'...
Listing './lib/python3.5/site-packages/pypandoc-1.4.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/wheel'...
Listing './lib/python3.5/site-packages/wheel/signatures'...
Listing './lib/python3.5/site-packages/wheel/tool'...
Listing './lib/python3.5/site-packages/wheel-0.30.0.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
